out/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    ELSE
    LBRACKET
    RBRACKET
    SQUOTE

Grammar

Rule 0     S' -> program
Rule 1     program -> INT MAIN LPAREN RPAREN bloco
Rule 2     sinal -> NOT PLUS
Rule 3     sinal -> NOT MINUS
Rule 4     sinal -> NOT
Rule 5     sinal -> PLUS
Rule 6     sinal -> MINUS
Rule 7     comando -> declaration
Rule 8     comando -> assignment SEMICOLON
Rule 9     comando -> if_statement
Rule 10    comando -> while_statement
Rule 11    comando -> for_statement
Rule 12    comando -> bloco
Rule 13    comando -> break_statement
Rule 14    comando -> continue_statement
Rule 15    comando -> return_statement
Rule 16    comando -> printf_statement
Rule 17    comando -> scanf_statement
Rule 18    comandos -> comando comandos
Rule 19    comandos -> comando
Rule 20    bloco -> LBRACE comandos RBRACE
Rule 21    bloco -> LBRACE RBRACE
Rule 22    parentheses -> LPAREN valor RPAREN
Rule 23    type -> INT
Rule 24    type -> FLOAT
Rule 25    type -> CHAR
Rule 26    type -> VOID
Rule 27    type -> BOOL
Rule 28    operador -> MULTIPLY
Rule 29    operador -> DIV
Rule 30    operador -> MOD
Rule 31    operador -> PLUS
Rule 32    operador -> MINUS
Rule 33    operador -> EQUAL
Rule 34    operador -> NEQUAL
Rule 35    operador -> GT
Rule 36    operador -> LT
Rule 37    operador -> GTE
Rule 38    operador -> LTE
Rule 39    operador -> AND
Rule 40    operador -> OR
Rule 41    boolean -> TRUE
Rule 42    boolean -> FALSE
Rule 43    valor -> NUMBER
Rule 44    valor -> NOME
Rule 45    valor -> CHARACTER
Rule 46    valor -> boolean
Rule 47    valor -> operation
Rule 48    valor -> parentheses
Rule 49    valor -> sinal valor
Rule 50    valores -> valor
Rule 51    valores -> valor COMMA valores
Rule 52    operation -> valor operador valor
Rule 53    assignment -> NOME ASSIGN valor
Rule 54    declaration_list -> NOME
Rule 55    declaration_list -> NOME declaration_list
Rule 56    declaration_list -> NOME ASSIGN valor
Rule 57    declaration_list -> NOME ASSIGN valor COMMA declaration_list
Rule 58    declaration -> type declaration_list SEMICOLON
Rule 59    if_statement -> IF LPAREN valor RPAREN bloco
Rule 60    while_statement -> WHILE LPAREN valor RPAREN bloco
Rule 61    for_statement -> FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN comando
Rule 62    for_init -> assignment
Rule 63    for_init -> declaration
Rule 64    for_init -> valor
Rule 65    for_init -> empty
Rule 66    for_init -> assignment for_comma
Rule 67    for_init -> valor for_comma
Rule 68    for_init -> declaration for_comma
Rule 69    for_comma -> COMMA assignment
Rule 70    for_comma -> COMMA valor SEMICOLON
Rule 71    for_comma -> COMMA assignment for_comma
Rule 72    for_condition -> assignment
Rule 73    for_condition -> valor
Rule 74    for_condition -> valor for_comma
Rule 75    for_condition -> assignment for_comma
Rule 76    for_condition -> empty
Rule 77    for_update -> assignment
Rule 78    for_update -> valor
Rule 79    for_update -> valor for_comma
Rule 80    for_update -> assignment for_comma
Rule 81    for_update -> empty
Rule 82    scanf_statement -> SCANF LPAREN CHARACTER COMMA NOME RPAREN SEMICOLON
Rule 83    printf_statement -> PRINTF LPAREN CHARACTER COMMA valores RPAREN SEMICOLON
Rule 84    printf_statement -> PRINTF LPAREN CHARACTER RPAREN SEMICOLON
Rule 85    break_statement -> BREAK SEMICOLON
Rule 86    continue_statement -> CONTINUE SEMICOLON
Rule 87    return_statement -> RETURN valor SEMICOLON
Rule 88    empty -> <empty>

Terminals, with rules where they appear

AND                  : 39
ASSIGN               : 53 56 57
BOOL                 : 27
BREAK                : 85
CHAR                 : 25
CHARACTER            : 45 82 83 84
COMMA                : 51 57 69 70 71 82 83
CONTINUE             : 86
DIV                  : 29
DOT                  : 
ELSE                 : 
EQUAL                : 33
FALSE                : 42
FLOAT                : 24
FOR                  : 61
GT                   : 35
GTE                  : 37
IF                   : 59
INT                  : 1 23
LBRACE               : 20 21
LBRACKET             : 
LPAREN               : 1 22 59 60 61 82 83 84
LT                   : 36
LTE                  : 38
MAIN                 : 1
MINUS                : 3 6 32
MOD                  : 30
MULTIPLY             : 28
NEQUAL               : 34
NOME                 : 44 53 54 55 56 57 82
NOT                  : 2 3 4
NUMBER               : 43
OR                   : 40
PLUS                 : 2 5 31
PRINTF               : 83 84
RBRACE               : 20 21
RBRACKET             : 
RETURN               : 87
RPAREN               : 1 22 59 60 61 82 83 84
SCANF                : 82
SEMICOLON            : 8 58 61 61 70 82 83 84 85 86 87
SQUOTE               : 
TRUE                 : 41
VOID                 : 26
WHILE                : 60
error                : 

Nonterminals, with rules where they appear

assignment           : 8 62 66 69 71 72 75 77 80
bloco                : 1 12 59 60
boolean              : 46
break_statement      : 13
comando              : 18 19 61
comandos             : 18 20
continue_statement   : 14
declaration          : 7 63 68
declaration_list     : 55 57 58
empty                : 65 76 81
for_comma            : 66 67 68 71 74 75 79 80
for_condition        : 61
for_init             : 61
for_statement        : 11
for_update           : 61
if_statement         : 9
operador             : 52
operation            : 47
parentheses          : 48
printf_statement     : 16
program              : 0
return_statement     : 15
scanf_statement      : 17
sinal                : 49
type                 : 58
valor                : 22 49 50 51 52 52 53 56 57 59 60 64 67 70 73 74 78 79 87
valores              : 51 83
while_statement      : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . INT MAIN LPAREN RPAREN bloco

    INT             shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> INT . MAIN LPAREN RPAREN bloco

    MAIN            shift and go to state 3


state 3

    (1) program -> INT MAIN . LPAREN RPAREN bloco

    LPAREN          shift and go to state 4


state 4

    (1) program -> INT MAIN LPAREN . RPAREN bloco

    RPAREN          shift and go to state 5


state 5

    (1) program -> INT MAIN LPAREN RPAREN . bloco
    (20) bloco -> . LBRACE comandos RBRACE
    (21) bloco -> . LBRACE RBRACE

    LBRACE          shift and go to state 7

    bloco                          shift and go to state 6

state 6

    (1) program -> INT MAIN LPAREN RPAREN bloco .

    $end            reduce using rule 1 (program -> INT MAIN LPAREN RPAREN bloco .)


state 7

    (20) bloco -> LBRACE . comandos RBRACE
    (21) bloco -> LBRACE . RBRACE
    (18) comandos -> . comando comandos
    (19) comandos -> . comando
    (7) comando -> . declaration
    (8) comando -> . assignment SEMICOLON
    (9) comando -> . if_statement
    (10) comando -> . while_statement
    (11) comando -> . for_statement
    (12) comando -> . bloco
    (13) comando -> . break_statement
    (14) comando -> . continue_statement
    (15) comando -> . return_statement
    (16) comando -> . printf_statement
    (17) comando -> . scanf_statement
    (58) declaration -> . type declaration_list SEMICOLON
    (53) assignment -> . NOME ASSIGN valor
    (59) if_statement -> . IF LPAREN valor RPAREN bloco
    (60) while_statement -> . WHILE LPAREN valor RPAREN bloco
    (61) for_statement -> . FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN comando
    (20) bloco -> . LBRACE comandos RBRACE
    (21) bloco -> . LBRACE RBRACE
    (85) break_statement -> . BREAK SEMICOLON
    (86) continue_statement -> . CONTINUE SEMICOLON
    (87) return_statement -> . RETURN valor SEMICOLON
    (83) printf_statement -> . PRINTF LPAREN CHARACTER COMMA valores RPAREN SEMICOLON
    (84) printf_statement -> . PRINTF LPAREN CHARACTER RPAREN SEMICOLON
    (82) scanf_statement -> . SCANF LPAREN CHARACTER COMMA NOME RPAREN SEMICOLON
    (23) type -> . INT
    (24) type -> . FLOAT
    (25) type -> . CHAR
    (26) type -> . VOID
    (27) type -> . BOOL

    RBRACE          shift and go to state 9
    NOME            shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    FOR             shift and go to state 26
    LBRACE          shift and go to state 7
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    PRINTF          shift and go to state 30
    SCANF           shift and go to state 31
    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    CHAR            shift and go to state 34
    VOID            shift and go to state 35
    BOOL            shift and go to state 36

    comandos                       shift and go to state 8
    comando                        shift and go to state 10
    declaration                    shift and go to state 11
    assignment                     shift and go to state 12
    if_statement                   shift and go to state 13
    while_statement                shift and go to state 14
    for_statement                  shift and go to state 15
    bloco                          shift and go to state 16
    break_statement                shift and go to state 17
    continue_statement             shift and go to state 18
    return_statement               shift and go to state 19
    printf_statement               shift and go to state 20
    scanf_statement                shift and go to state 21
    type                           shift and go to state 22

state 8

    (20) bloco -> LBRACE comandos . RBRACE

    RBRACE          shift and go to state 37


state 9

    (21) bloco -> LBRACE RBRACE .

    $end            reduce using rule 21 (bloco -> LBRACE RBRACE .)
    NOME            reduce using rule 21 (bloco -> LBRACE RBRACE .)
    IF              reduce using rule 21 (bloco -> LBRACE RBRACE .)
    WHILE           reduce using rule 21 (bloco -> LBRACE RBRACE .)
    FOR             reduce using rule 21 (bloco -> LBRACE RBRACE .)
    LBRACE          reduce using rule 21 (bloco -> LBRACE RBRACE .)
    BREAK           reduce using rule 21 (bloco -> LBRACE RBRACE .)
    CONTINUE        reduce using rule 21 (bloco -> LBRACE RBRACE .)
    RETURN          reduce using rule 21 (bloco -> LBRACE RBRACE .)
    PRINTF          reduce using rule 21 (bloco -> LBRACE RBRACE .)
    SCANF           reduce using rule 21 (bloco -> LBRACE RBRACE .)
    INT             reduce using rule 21 (bloco -> LBRACE RBRACE .)
    FLOAT           reduce using rule 21 (bloco -> LBRACE RBRACE .)
    CHAR            reduce using rule 21 (bloco -> LBRACE RBRACE .)
    VOID            reduce using rule 21 (bloco -> LBRACE RBRACE .)
    BOOL            reduce using rule 21 (bloco -> LBRACE RBRACE .)
    RBRACE          reduce using rule 21 (bloco -> LBRACE RBRACE .)


state 10

    (18) comandos -> comando . comandos
    (19) comandos -> comando .
    (18) comandos -> . comando comandos
    (19) comandos -> . comando
    (7) comando -> . declaration
    (8) comando -> . assignment SEMICOLON
    (9) comando -> . if_statement
    (10) comando -> . while_statement
    (11) comando -> . for_statement
    (12) comando -> . bloco
    (13) comando -> . break_statement
    (14) comando -> . continue_statement
    (15) comando -> . return_statement
    (16) comando -> . printf_statement
    (17) comando -> . scanf_statement
    (58) declaration -> . type declaration_list SEMICOLON
    (53) assignment -> . NOME ASSIGN valor
    (59) if_statement -> . IF LPAREN valor RPAREN bloco
    (60) while_statement -> . WHILE LPAREN valor RPAREN bloco
    (61) for_statement -> . FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN comando
    (20) bloco -> . LBRACE comandos RBRACE
    (21) bloco -> . LBRACE RBRACE
    (85) break_statement -> . BREAK SEMICOLON
    (86) continue_statement -> . CONTINUE SEMICOLON
    (87) return_statement -> . RETURN valor SEMICOLON
    (83) printf_statement -> . PRINTF LPAREN CHARACTER COMMA valores RPAREN SEMICOLON
    (84) printf_statement -> . PRINTF LPAREN CHARACTER RPAREN SEMICOLON
    (82) scanf_statement -> . SCANF LPAREN CHARACTER COMMA NOME RPAREN SEMICOLON
    (23) type -> . INT
    (24) type -> . FLOAT
    (25) type -> . CHAR
    (26) type -> . VOID
    (27) type -> . BOOL

    RBRACE          reduce using rule 19 (comandos -> comando .)
    NOME            shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    FOR             shift and go to state 26
    LBRACE          shift and go to state 7
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    PRINTF          shift and go to state 30
    SCANF           shift and go to state 31
    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    CHAR            shift and go to state 34
    VOID            shift and go to state 35
    BOOL            shift and go to state 36

    comando                        shift and go to state 10
    comandos                       shift and go to state 38
    declaration                    shift and go to state 11
    assignment                     shift and go to state 12
    if_statement                   shift and go to state 13
    while_statement                shift and go to state 14
    for_statement                  shift and go to state 15
    bloco                          shift and go to state 16
    break_statement                shift and go to state 17
    continue_statement             shift and go to state 18
    return_statement               shift and go to state 19
    printf_statement               shift and go to state 20
    scanf_statement                shift and go to state 21
    type                           shift and go to state 22

state 11

    (7) comando -> declaration .

    NOME            reduce using rule 7 (comando -> declaration .)
    IF              reduce using rule 7 (comando -> declaration .)
    WHILE           reduce using rule 7 (comando -> declaration .)
    FOR             reduce using rule 7 (comando -> declaration .)
    LBRACE          reduce using rule 7 (comando -> declaration .)
    BREAK           reduce using rule 7 (comando -> declaration .)
    CONTINUE        reduce using rule 7 (comando -> declaration .)
    RETURN          reduce using rule 7 (comando -> declaration .)
    PRINTF          reduce using rule 7 (comando -> declaration .)
    SCANF           reduce using rule 7 (comando -> declaration .)
    INT             reduce using rule 7 (comando -> declaration .)
    FLOAT           reduce using rule 7 (comando -> declaration .)
    CHAR            reduce using rule 7 (comando -> declaration .)
    VOID            reduce using rule 7 (comando -> declaration .)
    BOOL            reduce using rule 7 (comando -> declaration .)
    RBRACE          reduce using rule 7 (comando -> declaration .)


state 12

    (8) comando -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 39


state 13

    (9) comando -> if_statement .

    NOME            reduce using rule 9 (comando -> if_statement .)
    IF              reduce using rule 9 (comando -> if_statement .)
    WHILE           reduce using rule 9 (comando -> if_statement .)
    FOR             reduce using rule 9 (comando -> if_statement .)
    LBRACE          reduce using rule 9 (comando -> if_statement .)
    BREAK           reduce using rule 9 (comando -> if_statement .)
    CONTINUE        reduce using rule 9 (comando -> if_statement .)
    RETURN          reduce using rule 9 (comando -> if_statement .)
    PRINTF          reduce using rule 9 (comando -> if_statement .)
    SCANF           reduce using rule 9 (comando -> if_statement .)
    INT             reduce using rule 9 (comando -> if_statement .)
    FLOAT           reduce using rule 9 (comando -> if_statement .)
    CHAR            reduce using rule 9 (comando -> if_statement .)
    VOID            reduce using rule 9 (comando -> if_statement .)
    BOOL            reduce using rule 9 (comando -> if_statement .)
    RBRACE          reduce using rule 9 (comando -> if_statement .)


state 14

    (10) comando -> while_statement .

    NOME            reduce using rule 10 (comando -> while_statement .)
    IF              reduce using rule 10 (comando -> while_statement .)
    WHILE           reduce using rule 10 (comando -> while_statement .)
    FOR             reduce using rule 10 (comando -> while_statement .)
    LBRACE          reduce using rule 10 (comando -> while_statement .)
    BREAK           reduce using rule 10 (comando -> while_statement .)
    CONTINUE        reduce using rule 10 (comando -> while_statement .)
    RETURN          reduce using rule 10 (comando -> while_statement .)
    PRINTF          reduce using rule 10 (comando -> while_statement .)
    SCANF           reduce using rule 10 (comando -> while_statement .)
    INT             reduce using rule 10 (comando -> while_statement .)
    FLOAT           reduce using rule 10 (comando -> while_statement .)
    CHAR            reduce using rule 10 (comando -> while_statement .)
    VOID            reduce using rule 10 (comando -> while_statement .)
    BOOL            reduce using rule 10 (comando -> while_statement .)
    RBRACE          reduce using rule 10 (comando -> while_statement .)


state 15

    (11) comando -> for_statement .

    NOME            reduce using rule 11 (comando -> for_statement .)
    IF              reduce using rule 11 (comando -> for_statement .)
    WHILE           reduce using rule 11 (comando -> for_statement .)
    FOR             reduce using rule 11 (comando -> for_statement .)
    LBRACE          reduce using rule 11 (comando -> for_statement .)
    BREAK           reduce using rule 11 (comando -> for_statement .)
    CONTINUE        reduce using rule 11 (comando -> for_statement .)
    RETURN          reduce using rule 11 (comando -> for_statement .)
    PRINTF          reduce using rule 11 (comando -> for_statement .)
    SCANF           reduce using rule 11 (comando -> for_statement .)
    INT             reduce using rule 11 (comando -> for_statement .)
    FLOAT           reduce using rule 11 (comando -> for_statement .)
    CHAR            reduce using rule 11 (comando -> for_statement .)
    VOID            reduce using rule 11 (comando -> for_statement .)
    BOOL            reduce using rule 11 (comando -> for_statement .)
    RBRACE          reduce using rule 11 (comando -> for_statement .)


state 16

    (12) comando -> bloco .

    NOME            reduce using rule 12 (comando -> bloco .)
    IF              reduce using rule 12 (comando -> bloco .)
    WHILE           reduce using rule 12 (comando -> bloco .)
    FOR             reduce using rule 12 (comando -> bloco .)
    LBRACE          reduce using rule 12 (comando -> bloco .)
    BREAK           reduce using rule 12 (comando -> bloco .)
    CONTINUE        reduce using rule 12 (comando -> bloco .)
    RETURN          reduce using rule 12 (comando -> bloco .)
    PRINTF          reduce using rule 12 (comando -> bloco .)
    SCANF           reduce using rule 12 (comando -> bloco .)
    INT             reduce using rule 12 (comando -> bloco .)
    FLOAT           reduce using rule 12 (comando -> bloco .)
    CHAR            reduce using rule 12 (comando -> bloco .)
    VOID            reduce using rule 12 (comando -> bloco .)
    BOOL            reduce using rule 12 (comando -> bloco .)
    RBRACE          reduce using rule 12 (comando -> bloco .)


state 17

    (13) comando -> break_statement .

    NOME            reduce using rule 13 (comando -> break_statement .)
    IF              reduce using rule 13 (comando -> break_statement .)
    WHILE           reduce using rule 13 (comando -> break_statement .)
    FOR             reduce using rule 13 (comando -> break_statement .)
    LBRACE          reduce using rule 13 (comando -> break_statement .)
    BREAK           reduce using rule 13 (comando -> break_statement .)
    CONTINUE        reduce using rule 13 (comando -> break_statement .)
    RETURN          reduce using rule 13 (comando -> break_statement .)
    PRINTF          reduce using rule 13 (comando -> break_statement .)
    SCANF           reduce using rule 13 (comando -> break_statement .)
    INT             reduce using rule 13 (comando -> break_statement .)
    FLOAT           reduce using rule 13 (comando -> break_statement .)
    CHAR            reduce using rule 13 (comando -> break_statement .)
    VOID            reduce using rule 13 (comando -> break_statement .)
    BOOL            reduce using rule 13 (comando -> break_statement .)
    RBRACE          reduce using rule 13 (comando -> break_statement .)


state 18

    (14) comando -> continue_statement .

    NOME            reduce using rule 14 (comando -> continue_statement .)
    IF              reduce using rule 14 (comando -> continue_statement .)
    WHILE           reduce using rule 14 (comando -> continue_statement .)
    FOR             reduce using rule 14 (comando -> continue_statement .)
    LBRACE          reduce using rule 14 (comando -> continue_statement .)
    BREAK           reduce using rule 14 (comando -> continue_statement .)
    CONTINUE        reduce using rule 14 (comando -> continue_statement .)
    RETURN          reduce using rule 14 (comando -> continue_statement .)
    PRINTF          reduce using rule 14 (comando -> continue_statement .)
    SCANF           reduce using rule 14 (comando -> continue_statement .)
    INT             reduce using rule 14 (comando -> continue_statement .)
    FLOAT           reduce using rule 14 (comando -> continue_statement .)
    CHAR            reduce using rule 14 (comando -> continue_statement .)
    VOID            reduce using rule 14 (comando -> continue_statement .)
    BOOL            reduce using rule 14 (comando -> continue_statement .)
    RBRACE          reduce using rule 14 (comando -> continue_statement .)


state 19

    (15) comando -> return_statement .

    NOME            reduce using rule 15 (comando -> return_statement .)
    IF              reduce using rule 15 (comando -> return_statement .)
    WHILE           reduce using rule 15 (comando -> return_statement .)
    FOR             reduce using rule 15 (comando -> return_statement .)
    LBRACE          reduce using rule 15 (comando -> return_statement .)
    BREAK           reduce using rule 15 (comando -> return_statement .)
    CONTINUE        reduce using rule 15 (comando -> return_statement .)
    RETURN          reduce using rule 15 (comando -> return_statement .)
    PRINTF          reduce using rule 15 (comando -> return_statement .)
    SCANF           reduce using rule 15 (comando -> return_statement .)
    INT             reduce using rule 15 (comando -> return_statement .)
    FLOAT           reduce using rule 15 (comando -> return_statement .)
    CHAR            reduce using rule 15 (comando -> return_statement .)
    VOID            reduce using rule 15 (comando -> return_statement .)
    BOOL            reduce using rule 15 (comando -> return_statement .)
    RBRACE          reduce using rule 15 (comando -> return_statement .)


state 20

    (16) comando -> printf_statement .

    NOME            reduce using rule 16 (comando -> printf_statement .)
    IF              reduce using rule 16 (comando -> printf_statement .)
    WHILE           reduce using rule 16 (comando -> printf_statement .)
    FOR             reduce using rule 16 (comando -> printf_statement .)
    LBRACE          reduce using rule 16 (comando -> printf_statement .)
    BREAK           reduce using rule 16 (comando -> printf_statement .)
    CONTINUE        reduce using rule 16 (comando -> printf_statement .)
    RETURN          reduce using rule 16 (comando -> printf_statement .)
    PRINTF          reduce using rule 16 (comando -> printf_statement .)
    SCANF           reduce using rule 16 (comando -> printf_statement .)
    INT             reduce using rule 16 (comando -> printf_statement .)
    FLOAT           reduce using rule 16 (comando -> printf_statement .)
    CHAR            reduce using rule 16 (comando -> printf_statement .)
    VOID            reduce using rule 16 (comando -> printf_statement .)
    BOOL            reduce using rule 16 (comando -> printf_statement .)
    RBRACE          reduce using rule 16 (comando -> printf_statement .)


state 21

    (17) comando -> scanf_statement .

    NOME            reduce using rule 17 (comando -> scanf_statement .)
    IF              reduce using rule 17 (comando -> scanf_statement .)
    WHILE           reduce using rule 17 (comando -> scanf_statement .)
    FOR             reduce using rule 17 (comando -> scanf_statement .)
    LBRACE          reduce using rule 17 (comando -> scanf_statement .)
    BREAK           reduce using rule 17 (comando -> scanf_statement .)
    CONTINUE        reduce using rule 17 (comando -> scanf_statement .)
    RETURN          reduce using rule 17 (comando -> scanf_statement .)
    PRINTF          reduce using rule 17 (comando -> scanf_statement .)
    SCANF           reduce using rule 17 (comando -> scanf_statement .)
    INT             reduce using rule 17 (comando -> scanf_statement .)
    FLOAT           reduce using rule 17 (comando -> scanf_statement .)
    CHAR            reduce using rule 17 (comando -> scanf_statement .)
    VOID            reduce using rule 17 (comando -> scanf_statement .)
    BOOL            reduce using rule 17 (comando -> scanf_statement .)
    RBRACE          reduce using rule 17 (comando -> scanf_statement .)


state 22

    (58) declaration -> type . declaration_list SEMICOLON
    (54) declaration_list -> . NOME
    (55) declaration_list -> . NOME declaration_list
    (56) declaration_list -> . NOME ASSIGN valor
    (57) declaration_list -> . NOME ASSIGN valor COMMA declaration_list

    NOME            shift and go to state 41

    declaration_list               shift and go to state 40

state 23

    (53) assignment -> NOME . ASSIGN valor

    ASSIGN          shift and go to state 42


state 24

    (59) if_statement -> IF . LPAREN valor RPAREN bloco

    LPAREN          shift and go to state 43


state 25

    (60) while_statement -> WHILE . LPAREN valor RPAREN bloco

    LPAREN          shift and go to state 44


state 26

    (61) for_statement -> FOR . LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN comando

    LPAREN          shift and go to state 45


state 27

    (85) break_statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 46


state 28

    (86) continue_statement -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 47


state 29
